{
    "name": "TempInputs",
    "maps": [
        {
            "name": "general",
            "id": "23f8f251-1c2a-4b1d-a1c2-945f27b5284a",
            "actions": [
                {
                    "name": "action",
                    "type": "Value",
                    "id": "05a270dc-e336-48c4-8fb7-51e654a20e39",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "cancel",
                    "type": "Value",
                    "id": "104688f0-bdbb-4bb6-9636-6e0ebabbb465",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "buttonWest",
                    "type": "Button",
                    "id": "4e83ef54-63f0-4a3c-a552-28f78a1e1648",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "buttonNorth",
                    "type": "Button",
                    "id": "5ff0acf0-3029-437c-b3b2-cf4c92320db1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "buttonEast",
                    "type": "Button",
                    "id": "c6e1e4ac-2d32-441d-a103-a0298b9ab866",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "oneKey",
                    "type": "Button",
                    "id": "2a65a149-44e6-46da-9eea-862c4f8544e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "twoKey",
                    "type": "Button",
                    "id": "aefeffc2-8d57-4aef-b4fb-4c6c415e3c8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "threeKey",
                    "type": "Button",
                    "id": "1c543a1b-6ef3-4fd8-9634-a2339eb061ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fourKey",
                    "type": "Button",
                    "id": "f5d15249-60b1-43bf-9df2-0da04b0cd15f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "space",
                    "type": "Button",
                    "id": "fe35796e-dc4d-45e7-9377-a0394a7777a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "f_Key",
                    "type": "Button",
                    "id": "c1f310a2-6593-4b7e-b9b6-7537ce1248dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "g_key",
                    "type": "Button",
                    "id": "820ea945-9bc8-4bc1-8704-f69bdcd0e04c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "t_key",
                    "type": "Button",
                    "id": "5ee3271f-e8be-41b1-a48e-a1ca41cbb767",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "i_key",
                    "type": "Button",
                    "id": "aae7f598-c76b-4dff-a857-824f4c3f881b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "b_key",
                    "type": "Button",
                    "id": "ea39a3df-516a-4a96-89cf-836ec4f78b02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "m_key",
                    "type": "Button",
                    "id": "eb469908-7d39-4865-8077-9adaf2283981",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "n_key",
                    "type": "Button",
                    "id": "29415104-2a94-4c78-9e37-ee57d41442ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "x_key",
                    "type": "Button",
                    "id": "ad7bee2c-e748-48fa-ad1c-bcac31de57b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "c_key",
                    "type": "Button",
                    "id": "ba7a15be-3108-4709-ae96-038dfaaef286",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "v_key",
                    "type": "Button",
                    "id": "bdd38844-c2b7-4434-a627-13a0e04f29ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b5a7330-d25a-4ff7-b99d-fa56186dd479",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aa2d5a0-a0c2-4421-899b-7aeec4198783",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a193d20e-634f-47df-8714-e1790e497d79",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ecce777-e1f4-48b7-974e-6b32759f1878",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b94eca74-f429-4d92-b4da-f20088b38618",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "414ebb04-b1a2-43e4-891a-46e7176b6199",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80347876-490a-4cdc-8743-fff2492124a4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonNorth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28b0f0c3-570f-4bf6-b1a0-a26e6e11939f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonNorth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "283bbd48-2935-4e84-9b98-93d04d1af8a9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonEast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fd79650-9924-4ab5-81f1-6f310358a043",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonEast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9771d224-acc4-40d0-9b71-d2b4518625a6",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "oneKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d1dd23a-e255-4d78-924f-78a6bdac0de1",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "twoKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2019d2f-6f20-4afd-8e9b-28e57a6e4d25",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "threeKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3596a12-9554-4ebc-8f4b-5dec8a746bdd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "space",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7046bd68-8dc5-4a19-9575-8e53a13ddea2",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fourKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c00a0073-2529-4a10-af03-0be2282a8602",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "g_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55e747de-7792-40a6-b3f6-92654af6f1cf",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "f_Key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b3df21f-953b-43b1-809c-b457eec7ea89",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "t_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ac0bd77-9ba6-4f06-afc0-685fa45c8595",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "i_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c3f7709-4473-426b-89fa-d4e8668a996d",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "b_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04ecc7ca-d904-4032-b01d-71b4f426d431",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "m_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dffd32d6-02ea-413d-af82-fe52aff41b7e",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "n_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "255c44ba-f611-42d1-8bcd-53fed3925f6c",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "x_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be3d3673-281f-4d8f-b34d-9c65789b2196",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "c_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "672cf5b3-e3c0-4419-83ec-043ad325ca6d",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "v_key",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}